--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.77.2",
+    "sanity-plugin-internationalized-array": "^3.1.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
@@ -29,9 +30,9 @@
     "typescript": "^5.1.6"
   },
   "prettier": {
-    "semi": false,
+    "semi": true,
     "printWidth": 100,
-    "bracketSpacing": false,
+    "bracketSpacing": true,
     "singleQuote": true
   }
 }
